# rob

./: LICENSE  Makefile  README.md  report.html  rob.cabal  rob.lock-8.0.2  stack.yaml
app/: Main.hs
src/: Config.hs  Logger.hs  Package.hs  Questionnaire.hs  Questions.hs  Tasks.hs  UserMessages.hs
src/Actions/: Add.hs  List.hs  New.hs
src/Rob/: Config.hs  Logger.hs  Package.hs  Project.hs  Questionnaire.hs  Tasks.hs  Types.hs  UserMessages.hs
src/Rob/Actions/: Add.hs  List.hs  New.hs  Remove.hs
