name:                rob
version:             0.0.2.1
synopsis:            Simple projects generator
description:         See README at <https://github.com/GianlucaGuarini/rob/blob/develop/README.md>
homepage:            https://github.com/gianlucaguarini/rob#readme
license:             MIT
license-file:        LICENSE
author:              Gianluca Guarini
maintainer:          gianluca.guarini@gmail.com
copyright:           Gianlua Guarini
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.4.4,
                     GHC == 8.6.3

library
  hs-source-dirs:      src
  exposed-modules:     Rob.Config,
                       Rob.Types,
                       Rob.Project,
                       Rob.Tasks,
                       Rob.UserMessages,
                       Rob.Questionnaire,
                       Rob.Logger,
                       Rob.Package,
                       Rob.Actions.New,
                       Rob.Actions.Remove,
                       Rob.Actions.List,
                       Rob.Actions.Add
  build-depends:       base >= 4.7 && < 5,
                       fortytwo, 
                       directory, 
                       filepath, 
                       pathwalk, 
                       Glob, 
                       yaml,
                       vector, 
                       ede, 
                       text, 
                       unordered-containers, 
                       cmdargs, 
                       ansi-terminal,
                       bytestring,
                       time 
  other-modules:       Paths_rob
  default-language:    Haskell2010

executable rob
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       cmdargs >= 0.10.17 && <= 0.10.18
  build-depends:       base,
                       rob
  default-language:    Haskell2010

test-suite rob-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       directory,
                       rob
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gianlucaguarini/rob
